cmake_minimum_required(VERSION 3.25)
project(Advent_of_Code_2024)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# ❄ 2024 ❄
add_executable(Day_01_24 2024/Day_01_24/main.cpp)
add_executable(Day_02_24 2024/Day_02_24/main.cpp)
add_executable(Day_03_24 2024/Day_03_24/main.cpp)
add_executable(Day_04_24 2024/Day_04_24/main.cpp)
# ❄ 2025 ❄
add_executable(Day_01_25 2025/Day_01_25/main.cpp)